feat: link to our website

--- a/index.html
+++ b/index.html
@@ -18,5 +18,7 @@
     </style>
 </head>
 <body>
-    <img src='assets/wordmark.png' />
+    <a href='https://bitsofgood.org'>
+        <img src='assets/wordmark.png' />
+    </a>
 </body>
