--- a/cohorts/6/index.html
+++ b/cohorts/6/index.html
@@ -1,29 +1,29 @@
-<head>
-
-</head>
+<head> </head>
 <body>
-    <header>
-
-    </header>
-    <main>
-        <section>
-            <div>
-
-            </div>
-            <div>
-
-            </div>
-        </section>
-        <section>
-            <div>
-
-            </div>
-            <div>
-                
-            </div>
-        </section>
-    </main>
-    <footer>
-
-    </footer>
+  <header>
+    <h1>Utter NonSense</h1>
+  </header>
+  <main>
+    <section>
+      <div>
+        <h2>Motto</h2>
+        <p>"We don't make sense"</p>
+      </div>
+      <div>
+        <h2>Cohort Members</h2>
+        <ul>
+          <li>Stephanie Luo</li>
+          <li>Deepsikha Das</li>
+          <li>Jacob Weinman</li>
+          <li>Nidhisha Dasari/li></li>
+          <li>Sam Daugherty</li>
+        </ul>
+      </div>
+    </section>
+    <section>
+      <div></div>
+      <div></div>
+    </section>
+  </main>
+  <footer></footer>
 </body>
