changed html file

--- a/cohorts/8/index.html
+++ b/cohorts/8/index.html
@@ -18,7 +18,7 @@
             <li><a href="https://github.com/kellytran3k">Kelly Tran</a></li>
             <li><a href="https://github.com/lilliniunni">Lilly Zhu</a></li>
             <li><a href="https://github.com/nsandell123">Neel Sandell</a></li>
-            <li><a href="">Sanjana Balusu</a></li>
+            <li><a href="https://github.com">Sanjana Balusu</a></li>
         </ul>
     
         <img src="https://img.pokemondb.net/artwork/large/vulpix.jpg" alt="Picture of vulpix">
