Adding images to ReadMe

--- a/cohorts/6/index.html
+++ b/cohorts/6/index.html
@@ -1,5 +1,6 @@
-<head> </head>
+<head>  </head>
 <body>
+  <img src="https://raw.githubusercontent.com/GTBitsOfGood/bootcamp/fall-2020/UtterNonsense/assets/header.png ">
   <header>
     <h1>Utter NonSense</h1>
   </header>
@@ -21,7 +22,9 @@
       </div>
     </section>
     <section>
-      <div></div>
+      <div>
+        <img src="https://camo.githubusercontent.com/36e5cb90a9cb6fb870170fd4dc62d1782eb5b499/68747470733a2f2f692e6b796d2d63646e2e636f6d2f656e74726965732f69636f6e732f66616365626f6f6b2f3030302f3030302f3039312f54726f6c6c466163652e6a7067">
+      </div>
       <div></div>
     </section>
   </main>
