Adding links to Github Accounts

--- a/cohorts/6/index.html
+++ b/cohorts/6/index.html
@@ -13,10 +13,10 @@
       <div>
         <h2>Cohort Members</h2>
         <ul>
-          <li>Stephanie Luo</li>
+          <a href="https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/UtterNonsense-Stephanie">Stephanie Luo</a>
           <li>Deepsikha Das</li>
-          <li>Jacob Weinman</li>
-          <li>Nidhisha Dasari/li></li>
+          <a href="https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/UtterNonsense-Jacob">Jacob Weinman</a>
+          <a href="https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/UtterNonsense-nidhisha">Nidhisha Dasari</a>
           <li>Sam Daugherty</li>
         </ul>
       </div>
