Adding links to Github Accounts

--- a/cohorts/6/index.html
+++ b/cohorts/6/index.html
@@ -13,10 +13,10 @@
       <div>
         <h2>Cohort Members</h2>
         <ul>
-          <li></li><a href="https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/UtterNonsense-Stephanie" target='_blank'>Stephanie Luo</a></li>
+          <li><a href="https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/UtterNonsense-Stephanie" target='_blank'>Stephanie Luo</a></li>
           <li>Deepsikha Das</li>
           <li><a href="https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/UtterNonsense-Jacob" target='_blank'>Jacob Weinman</a></li>
-          <li></li><a href="https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/UtterNonsense-nidhisha" target='_blank'>Nidhisha Dasari</a></li>
+          <li><a href="https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/UtterNonsense-nidhisha" target='_blank'>Nidhisha Dasari</a></li>
           <li>Sam Daugherty</li>
         </ul>
       </div>
