added rick roll

--- a/cohorts/8/index.html
+++ b/cohorts/8/index.html
@@ -22,6 +22,7 @@
         </ul>
     
         <img src="https://img.pokemondb.net/artwork/large/vulpix.jpg" alt="Picture of vulpix">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </section>
 </body>
 </html>
