--- a/cohorts/5/index.html
+++ b/cohorts/5/index.html
@@ -1,11 +1,14 @@
+
 <head>
-   
+    <style>
+        
+    </style>
 </head>
 
 <body>
     <header>
-        <h1>
-            Cohort The Fifth Element
+        <h1 style="color:darkslateblue;font-family:Georgia, 'Times New Roman', Times, serif">
+            Cohort <span style="color:goldenrod"> the Fifth </span> <span style="color:magenta">Element</span>
         </h1>
     </header>
  
@@ -14,7 +17,7 @@
     </h2>
 
     <p>
-        I am the gatekeeper of my own destiny, and I will have my glory day in the hot sun.
+            I am the gatekeeper of my own destiny, and I will have my glory day in the hot sun.
     </p>
 
     <main>
