--- a/cohorts/7/index.html
+++ b/cohorts/7/index.html
@@ -1,7 +1,7 @@
 <img src="https://github.com/GTBitsOfGood/bootcamp/raw/fall-2020/ChowChow/assets/header.png">
-<head>
+<header>
   Cohort Chow Chow
-</head>
+</header>
 <h1>
   Cohort Members
 </h1>
