--- a/cohorts/7/index.html
+++ b/cohorts/7/index.html
@@ -3,6 +3,12 @@
   Cohort Chow Chow
 </h1>
 <h1>
+  Motto
+</h1>
+<p>
+  "dignity and refinement above all"
+</p>
+<h1>
   Cohort Members
 </h1>
 <ul>
