--- a/cohorts/1/index.html
+++ b/cohorts/1/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
     <head>
-        <title>README</title>
+        <title>Hypertext Assassins</title>
     </head>
     <body>
         <header>
