--- a/index.html
+++ b/index.html
@@ -1,24 +1,49 @@
 <!DOCTYPE html>
 <head>
-    <style>
-        html, body {
-            margin: 0px;
-            width: 100%;
-            height: 100%;
-        }
-        body {
-            background-color: white;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-        img {
-            width: 500px;
-        }
-    </style>
+  <title>Bits of Good Bootcamp</title>
+  <style>
+    html,
+    body {
+      margin: 0px;
+      width: 100%;
+      height: 100%;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+        Roboto, Ubuntu, "Helvetica Neue", Oxygen, Cantarell, sans-serif;
+    }
+    body {
+      background-color: white;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+    img {
+      width: 500px;
+    }
+    ul {
+      list-style: none;
+    }
+    li {
+      padding-top: 5px;
+    }
+  </style>
 </head>
 <body>
-    <a href='https://bitsofgood.org'>
-        <img src='assets/wordmark.png' />
+  <div>
+    <a href="https://bitsofgood.org">
+      <img src="assets/wordmark.png" />
     </a>
+  </div>
+  <div>
+    <ul>
+      <li><a href="cohorts/1">Cohort 1 - Hypertext Assassins</a></li>
+      <li><a href="cohorts/2">Cohort 2 - Terrible Twos</a></li>
+      <li><a href="cohorts/3">Cohort 3 - Corgi</a></li>
+      <li><a href="cohorts/4">Cohort 4 - KAIRScares</a></li>
+      <li><a href="cohorts/5">Cohort 5 - The Fifth Element</a></li>
+      <li><a href="cohorts/6">Cohort 6 - Utter Nonsense</a></li>
+      <li><a href="cohorts/7">Cohort 7 - Chow Chow</a></li>
+      <li><a href="cohorts/8">Cohort 8 - 8Bit</a></li>
+    </ul>
+  </div>
 </body>
