--- a/cohorts/5/index.html
+++ b/cohorts/5/index.html
@@ -31,6 +31,7 @@
                 <li><a href = "https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/TFE-Carlo">Carlo</a></li>
                 <li><a href = "https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/TFE-sahya">Sahya</a></li>
                 <li><a href = "https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/TFE-madeline">Madeline</a></li>
+                <li><a href = "https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/TFE-Srishti">Srishti</a></li>
             </ul>
         </div>
 
