change name color of Lidya to green in html

--- a/cohorts/2/index.html
+++ b/cohorts/2/index.html
@@ -9,7 +9,7 @@
         <h2>Members</h2>
         <ul>
             <li><span style = "color:pink">Alice</span></li>
-            <li>Lidya</li>
+            <li style = "color:green">Lidya</li>
             <li><span style = "color:orange">Seife</span></li>
             <li>Shree</li>
             <li><span style = "color:blue">Evan</span></li>
