--- a/cohorts/8/index.html
+++ b/cohorts/8/index.html
@@ -4,10 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cohort 8 Branch Readme</title>
+    <link rel="stylesheet" href="index.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <section class="header-section center">
+        <div class="center">
+            <h1 class="cohort-title">Cohort 8Bit</h1>
+            <form action="https://www.youtube.com/embed/dQw4w9WgXcQ">
+                <input class="rick-roll-btn" type="submit" value="Learn More About Us!">
+            </form>
+        </div>
+    </section>
+
+    <section class="motto-section center">
+        <div class="center">
+            <h2 class="motto-title">Our Motto</h2>
+            <p class="motto-description">01000010 01111001 01110100 01100101</p>
+        </div>
+    </section>
+
+    <section class="team-member">
+
+    </section>
+
+
+
     <section class="readme">
-        <img src="/assets/header.png" alt="">
         <h1>Cohort 8Bit</h1>
         <hr>
         <h3>Our Motto</h3>
