--- a/cohorts/6/index.html
+++ b/cohorts/6/index.html
@@ -1,6 +1,8 @@
-<head>  </head>
+<head> </head>
 <body>
-  <img src="https://raw.githubusercontent.com/GTBitsOfGood/bootcamp/fall-2020/UtterNonsense/assets/header.png ">
+  <img
+    src="https://raw.githubusercontent.com/GTBitsOfGood/bootcamp/fall-2020/UtterNonsense/assets/header.png "
+  />
   <header>
     <h1>Utter NonSense</h1>
   </header>
@@ -13,17 +15,35 @@
       <div>
         <h2>Cohort Members</h2>
         <ul>
-          <li><a href="https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/UtterNonsense-Stephanie" target='_blank'>Stephanie Luo</a></li>
-          <li>Deepsikha Das</li>
-          <li><a href="https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/UtterNonsense-Jacob" target='_blank'>Jacob Weinman</a></li>
-          <li><a href="https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/UtterNonsense-nidhisha" target='_blank'>Nidhisha Dasari</a></li>
-          <li>Sam Daugherty</li>
+          <li>
+            <a
+              href="https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/UtterNonsense-Stephanie"
+              target="_blank"
+              >Stephanie Luo</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/UtterNonsense-Jacob"
+              target="_blank"
+              >Jacob Weinman</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/UtterNonsense-nidhisha"
+              target="_blank"
+              >Nidhisha Dasari</a
+            >
+          </li>
         </ul>
       </div>
     </section>
     <section>
       <div>
-        <img src="https://camo.githubusercontent.com/36e5cb90a9cb6fb870170fd4dc62d1782eb5b499/68747470733a2f2f692e6b796d2d63646e2e636f6d2f656e74726965732f69636f6e732f66616365626f6f6b2f3030302f3030302f3039312f54726f6c6c466163652e6a7067">
+        <img
+          src="https://camo.githubusercontent.com/36e5cb90a9cb6fb870170fd4dc62d1782eb5b499/68747470733a2f2f692e6b796d2d63646e2e636f6d2f656e74726965732f69636f6e732f66616365626f6f6b2f3030302f3030302f3039312f54726f6c6c466163652e6a7067"
+        />
       </div>
       <div></div>
     </section>
