--- a/cohorts/2/index.html
+++ b/cohorts/2/index.html
@@ -1,14 +1,14 @@
 <html>
     <head>
 		<link rel="stylesheet" href="index.css">
-        <title>Cohort TerribleTwos</title>
+        <title>Cohort 2: TerribleTwos</title>
     </head>
     <body>
-        <h1>Cohort TerribleTwos</h1>
-        <h2>Motto</h2>
-        <p>send help</p>
-        <h2>Members</h2>
-        <ul>
+        <h1 class=mainTitle>Cohort 2: TerribleTwos</h1>
+        <h2 class=smallTitle>Motto</h2>
+        <p id=motto>send help</p>
+        <h2 class=smallTitle>Members</h2>
+        <ul id=memberList>
             <li><span style = "color:pink">Alice</span></li>
             <li>Lidya</li>
             <li><span style = "color:orange">Seife</span></li>
