--- a/cohorts/4/index.html
+++ b/cohorts/4/index.html
@@ -1,38 +1,26 @@
 <!DOCTYPE html>
 <head>
-    <style>
-        html, body {
-            margin: 0px;
-            width: 100%;
-            height: 100%;
-        }
-        body {
-            background-color: white;
-            /* display: flex; */
-            align-items: center;
-            justify-content: center;
-            padding-left: 40px;
-        }
-        img {
-            width: 500px;
-        }
-    </style>
+    <link rel = "stylesheet" href = "index.css">
+    <link ref="https://fonts.googleapis.com/css2?family=Monsterrat:wght@400&display=swap" rel = "stylesheet">
 </head>
 <body>
-    <h1>KAIRbears</h1>
+    <h1>KAIRSCares</h1>
     <h3>we KAIR about development but it Scares us too</h3>
     <ul>
         <li>
-            <a href='https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/KAIRScares-ashwini'>Ashwini</a>
+            <a id = "Ashwini" href='https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/KAIRScares-ashwini'>Ashwini</a>
         </li>
         <li>
-            <a href='https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/KAIRScares-Sneh'>Sneh</a>
+            <a id = "Sneh" href='https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/KAIRScares-Sneh'>Sneh</a>
         </li>
         <li>
-            <a href='https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/KAIRScares-ruchi'>Ruchi</a>
+            <a id = "Ruchi" href='https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/KAIRScares-ruchi'>Ruchi</a>
         </li>
         <li>
-            <a href='https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/KAIRScares-ila'>Ila</a>
+            <a id = "Ila" href='https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/KAIRScares-ila'>Ila</a>
+        </li>
+        <li>
+            <a id = "Kevin" href='#'>Kevin</a>
         </li>
     </ul>
     <p>
