--- a/cohorts/6/index.html
+++ b/cohorts/6/index.html
@@ -1,4 +1,6 @@
-<head> </head>
+<head>
+  <link rel="stylesheet" href="index.css" />
+</head>
 <body>
   <img
     src="https://raw.githubusercontent.com/GTBitsOfGood/bootcamp/fall-2020/UtterNonsense/assets/header.png "
@@ -8,7 +10,7 @@
   </header>
   <main>
     <section>
-      <div>
+      <div id="motto">
         <h2>Motto</h2>
         <p>"We don't make sense"</p>
       </div>
@@ -42,7 +44,7 @@
     <section>
       <div>
         <img
-          src="https://camo.githubusercontent.com/36e5cb90a9cb6fb870170fd4dc62d1782eb5b499/68747470733a2f2f692e6b796d2d63646e2e636f6d2f656e74726965732f69636f6e732f66616365626f6f6b2f3030302f3030302f3039312f54726f6c6c466163652e6a7067"
+          src="https://camo.githubusercontent.com/36e5cb90a9cb6fb870170fd4dc62d1782eb5b499/68747470733a2f2f692e6b796d2d63646e2e636f6d2f656e74726965732f69636f6e732f66616365626f6f6b2f3030302f3030302f3039312f54726f6c6c466163652e6a7067" class = "logo"
         />
       </div>
       <div></div>
