challenge tast 1 and 2

--- a/cohorts/2/index.html
+++ b/cohorts/2/index.html
@@ -4,18 +4,24 @@
         <title>Cohort TerribleTwos</title>
     </head>
     <body>
-        <h1>Cohort TerribleTwos</h1>
-        <h2>Motto</h2>
-        <p>send help</p>
-        <h2>Members</h2>
-        <ul>
-            <li><span style = "color:pink">Alice</span></li>
-            <li style = "color:green">Lidya</li>
-            <li><span style = "color:orange">Seife</span></li>
-            <li>Shree</li>
-            <li><span style = "color:blue">Evan</span></li>
-            <li>Vivian</li>
-        </ul>
-        <img src="teamimage.jpg" alt="team image">
+        <div class="title"> 
+            <h1 id="cohort-name" >Cohort TerribleTwos</h1>
+            <h2 id="cohort-motto">Motto</h2>
+        </div>
+            <p>send help</p>
+            <h2>Members</h2>
+            <ul>
+                <li><span style = "color:pink">Alice</span></li>
+                <li style = "color:green">Lidya</li>
+                <li><span style = "color:orange">Seife</span></li>
+                <li>Shree</li>
+                <li><span style = "color:blue">Evan</span></li>
+                <li>Vivian</li>
+            </ul>
+            <div class="mascot">
+                <img src="teamimage.jpg" alt="team image">
+            </div>
+            
+     
     </body>
 </html>
