changing background and motto

--- a/cohorts/6/index.html
+++ b/cohorts/6/index.html
@@ -2,15 +2,12 @@
   <link rel="stylesheet" href="index.css" />
 </head>
 <body>
-  <img
-    src="https://raw.githubusercontent.com/GTBitsOfGood/bootcamp/fall-2020/UtterNonsense/assets/header.png "
-  />
   <header>
     <h1>Utter NonSense</h1>
   </header>
   <main>
     <section>
-      <div id="motto">
+      <div class="motto">
         <h2>Motto</h2>
         <p>"We don't make sense"</p>
       </div>
