--- a/cohorts/2/index.html
+++ b/cohorts/2/index.html
@@ -4,27 +4,6 @@
         <title>Cohort 2: TerribleTwos</title>
     </head>
     <body>
-<<<<<<< HEAD
-        <div class="title"> 
-            <h1 id="cohort-name" >Cohort TerribleTwos</h1>
-            <h2 id="cohort-motto">Motto</h2>
-        </div>
-            <p>send help</p>
-            <h2>Members</h2>
-            <ul>
-                <li><span style = "color:pink">Alice</span></li>
-                <li style = "color:green">Lidya</li>
-                <li><span style = "color:orange">Seife</span></li>
-                <li>Shree</li>
-                <li><span style = "color:blue">Evan</span></li>
-                <li>Vivian</li>
-            </ul>
-            <div class="mascot">
-                <img src="teamimage.jpg" alt="team image">
-            </div>
-            
-     
-=======
         <h1 class=mainTitle>Cohort 2: TerribleTwos</h1>
         <h2 class=smallTitle>Motto</h2>
         <p id=motto>send help</p>
@@ -38,6 +17,8 @@
             <li>Vivian</li>
         </ul>
         <img src="teamimage.jpg" alt="team image">
->>>>>>> bd42195e399d06b07af399cbcafed07d8632eaaa
+        <div>
+            <h3>welcome, we're trying</h3>
+        </div>
     </body>
 </html>
