--- a/cohorts/5/index.html
+++ b/cohorts/5/index.html
@@ -1,5 +1,6 @@
-
+section
 <head>
+    <link rel="stylesheet" type="text/css" href="index.css" />
     <style>
         
     </style>
@@ -7,9 +8,11 @@
 
 <body>
     <header>
-        <h1 style="color:darkslateblue;font-family:Georgia, 'Times New Roman', Times, serif">
-            Cohort <span style="color:goldenrod"> the Fifth </span> <span style="color:magenta">Element</span>
+        <div class="flex-container">
+        <h1>
+            Cohort the <span>Fifth</span> Element
         </h1>
+        </div>
     </header>
  
     <h2>
@@ -21,11 +24,21 @@
     </p>
 
     <main>
-        <h2>
-            Cohort Names
-        </h2>
+        <section class="team">
+            <h2>
+                Cohort Names
+            </h2>   
 
-        <div>
+            <div class="pictures">
+                <picture>
+                    <img src="assets/Image from iOS.jpg"/>
+                </picture>
+                <picture>
+                    <img src="assets/Me_on_hike.png">
+                </picture>
+            </div> 
+        </section>
+        <div class="names">
             <ul>
                 <li><a href = "https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/TFE-Jasmine">Jasmine</a></li> 
                 <li><a href = "https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/TFE-Carlo">Carlo</a></li>
@@ -33,8 +46,7 @@
                 <li><a href = "https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/TFE-madeline">Madeline</a></li>
             </ul>
         </div>
-
-        <img src="https://img.favpng.com/9/8/19/vector-building-hand-png-favpng-8H0tr25ZsxvQfTV8GvccWXAEY.jpg"/>
+        
     </main>
 
     <footer>
