--- a/cohorts/1/index.html
+++ b/cohorts/1/index.html
@@ -1,38 +1,48 @@
 <!DOCTYPE html>
+<html>
     <head>
+        <link rel="stylesheet" href="index.css">
         <title>Hypertext Assassins</title>
     </head>
     <body>
         <header>
-            <img src="assets/header.png" width="400" height="100"/>
+            <!-- <img src="assets/header.png" width="400" height="100"/> -->
         </header>
-        <h1>Cohort Hypertext Assassins</h1>
-        <h3>Sparking joy one flame at a time \(^ヮ^)/</h3>
-        <h3>Cohort Members</h3>
-        <ul>
-            <li>
-                <a href="https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/hypertextAssassins-Emily">Emily Layton</a>
-            </li>
-            <li>
-                <a href="https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/hypertextAssassins-marlene">Marlene Garcia</a>
-            </li>
-            <li>
-                <a href="https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/hypertextAssassins-kirtana">Kirtana Mogili</a>
-            </li>
-            <li>
-                <a href="https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/hypertextAssassins-Eashan">Eashan Sinha</a>
-            </li>
-            <li>
-                <a href="https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/hypertextAssassins-carsen">Carsen Miller</a>
-            </li>
-            <li>
-                <a href="https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/hypertextAssassins-isha">Isha Palakurthy</a>
-            </li>
-        </ul>
-        <h3>Our Dear Mascot: Calcifer</h3>
-        <img src="https://media.giphy.com/media/qKmWi9mfycx6E/giphy.gif" width="250px" height="200px"/>
-        <h3>License</h3>
+        <h1 class="main">Cohort Hypertext Assassins</h1> 
+        <div class="welcome">
+            <h3 class="main">Sparking joy one flame at a time \(^ヮ^)/</h3>
+            <a href="https://youtu.be/oHg5SJYRHA0">Welcome to Calcifer: ruler of the Hypertext Assassins!</a>
+        </div>
+        <div class="box">
+            <h3>Cohort Members</h3>
+            <ul>
+                <li>
+                    <a href="https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/hypertextAssassins-Emily">Emily Layton</a>
+                </li>
+                <li>
+                    <a href="https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/hypertextAssassins-marlene">Marlene Garcia</a>
+                </li>
+                <li>
+                    <a href="https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/hypertextAssassins-kirtana">Kirtana Mogili</a>
+                </li>
+                <li>
+                    <a href="https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/hypertextAssassins-Eashan">Eashan Sinha</a>
+                </li>
+                <li>
+                    <a href="https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/hypertextAssassins-carsen">Carsen Miller</a>
+                </li>
+                <li>
+                    <a href="https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/hypertextAssassins-isha">Isha Palakurthy</a>
+                </li>
+            </ul>
+        </div>
+        <h3 class="calcifer">Our Dear Mascot: Calcifer</h3>
+        
+        <!-- <img src="https://media.giphy.com/media/qKmWi9mfycx6E/giphy.gif" width="250px" height="200px"/> -->
+        <!-- <h3>License</h3>
         <p>This repository is licensed under the <a href="../../LICENSE.txt">GNU GPLv3 License</a>.</p>
         <h3>Bits of Good Motto</h3>
-        <p>01000010 01111001 01110100 01100101</p>
+        <p>01000010 01111001 01110100 01100101</p> -->
     </body>
+</html>
+    
