--- a/cohorts/6/index.html
+++ b/cohorts/6/index.html
@@ -16,35 +16,55 @@
       </div>
       <div>
         <h2>Cohort Members</h2>
-        <ul>
-          <li>
-            <a
-              href="https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/UtterNonsense-Stephanie"
-              target="_blank"
-              >Stephanie Luo</a
+      </div>
+      <div class="all">
+        <div class="card">
+          <img src="1.jpg" style="width: 100%" />
+          <h1>Stephanie Luo</h1>
+          <p class="title">Amazing and Wholesome Person</p>
+          <p>CS Major</p>
+          <p>
+            <button
+              onclick="https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/UtterNonsense-Stephanie"
             >
-          </li>
-          <li>
-            <a
-              href="https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/UtterNonsense-Jacob"
-              target="_blank"
-              >Jacob Weinman</a
+              Steph's Branch
+            </button>
+          </p>
+        </div>
+
+        <div class="card">
+          <img src="2.jpg" style="width: 100%" />
+          <h1>Nidhisha Dasari</h1>
+          <p class="title">Interesting and Cool Person</p>
+          <p>CS Major</p>
+          <p>
+            <button
+              onclick="https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/UtterNonsense-nidhisha"
             >
-          </li>
-          <li>
-            <a
-              href="https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/UtterNonsense-nidhisha"
-              target="_blank"
-              >Nidhisha Dasari</a
-            >
-          </li>
-        </ul>
+              Nidhisha's Branch
+            </button>
+          </p>
+        </div>
+
+      <div class="card">
+        <img src="3.png" style="width: 100%" />
+        <h1>Jacob Weinman</h1>
+        <p class="title">Tech Guy</p>
+        <p>CS Major</p>
+        <p>
+          <button
+            onclick="https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/UtterNonsense-Jacob"
+          >
+            Jacob's Branch
+          </button>
+        </p>
       </div>
     </section>
     <section>
       <div>
         <img
-          src="https://camo.githubusercontent.com/36e5cb90a9cb6fb870170fd4dc62d1782eb5b499/68747470733a2f2f692e6b796d2d63646e2e636f6d2f656e74726965732f69636f6e732f66616365626f6f6b2f3030302f3030302f3039312f54726f6c6c466163652e6a7067" class = "logo"
+          src="https://camo.githubusercontent.com/36e5cb90a9cb6fb870170fd4dc62d1782eb5b499/68747470733a2f2f692e6b796d2d63646e2e636f6d2f656e74726965732f69636f6e732f66616365626f6f6b2f3030302f3030302f3039312f54726f6c6c466163652e6a7067"
+          class="logo"
         />
       </div>
       <div></div>
