--- a/cohorts/6/index.html
+++ b/cohorts/6/index.html
@@ -1,10 +1,12 @@
 <head>
   <link rel="stylesheet" href="index.css" />
+  <title>Utter Nonsense</title>
 </head>
 <body>
   <header>
     <div id = "title">
-    <h1>Utter NonSense</h1>
+    <h1>MEET <span class = "secondary"> UTTER NONSENSE </span>
+    </h1>
   </div>
   </header>
   <main>
@@ -13,61 +15,53 @@
         <h2>Motto</h2>
       </div>
       <div class = "motto">
-        <p>"We don't make sense"</p>
+        <p>Changing lives 10Bit at a time because 10Bit > 8BIT</p>
       </div>
+      <div id = "buttonPosition">
+      <a href="https://trollface.dk/" class="myButton">Meet Our Mascot!</a>
+    </div>
       <div id = "cohort">
-        <h2>Cohort Members</h2>
+        <h2>Our Cohort Members:</h2>
       </div>
       <div class="all">
         <div class="card">
-          <img src="1.jpg" style="width: 100%" />
+          <img src="1.jpg" style="width: 350px;height: 300px; border-radius:15px 15px 0px 0px;" />
           <h1>Stephanie Luo</h1>
-          <p class="title">Amazing and Wholesome Person</p>
-          <p>CS Major</p>
-          <p>
-            <button
-              onclick="https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/UtterNonsense-Stephanie"
+          <p class="title">The Hardworking Crewmate</p>
+          <p id = "button">
+            <a href = "https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/UtterNonsense-Stephanie"
             >
-              Steph's Branch
-            </button>
+              Steph's GitHub Branch
+            </a>
           </p>
         </div>
 
+
         <div class="card">
-          <img src="2.jpg" style="width: 100%" />
+          <img src="2.jpg" style="width: 350px; height: 300px; border-radius:15px 15px 0px 0px;" />
           <h1>Nidhisha Dasari</h1>
-          <p class="title">Interesting and Cool Person</p>
-          <p>CS Major</p>
-          <p>
-            <button
-              onclick="https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/UtterNonsense-nidhisha"
+          <p class="title">The Sus One</p>
+          <p id = "button">
+            <a href="https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/UtterNonsense-nidhisha"
             >
-              Nidhisha's Branch
-            </button>
+              Nidhisha's GitHub Branch
+            </a>
           </p>
         </div>
 
       <div class="card">
-        <img src="3.png" style="width: 100%" />
+        <img src="3.png" style="width: 350px; height: 300px; border-radius:15px 15px 0px 0px;" />
         <h1>Jacob Weinman</h1>
-        <p class="title">Tech Guy</p>
-        <p>CS Major</p>
-        <p>
-          <button
-            onclick="https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/UtterNonsense-Jacob"
+        <p class="title">The Imposter</p>
+        <p id = "button">
+          <a href = "https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/UtterNonsense-Jacob"
           >
-            Jacob's Branch
-          </button>
+            Jacob's GitHub Branch
+          </a>
         </p>
       </div>
     </section>
     <section>
-      <div>
-        <img
-          src="https://camo.githubusercontent.com/36e5cb90a9cb6fb870170fd4dc62d1782eb5b499/68747470733a2f2f692e6b796d2d63646e2e636f6d2f656e74726965732f69636f6e732f66616365626f6f6b2f3030302f3030302f3039312f54726f6c6c466163652e6a7067"
-          class="logo"
-        />
-      </div>
       <div></div>
     </section>
   </main>
