--- a/cohorts/6/index.html
+++ b/cohorts/6/index.html
@@ -12,10 +12,10 @@
   <main>
     <section>
       <div class="motto">
-        <h2>Motto</h2>
+        <h2>Motto:</h2>
       </div>
       <div class = "motto">
-        <p>Changing lives 10Bit at a time because 10Bit > 8BIT</p>
+        <p>Changing lives 10Bit at a time (10Bit > 8BIT)</p>
       </div>
       <div id = "buttonPosition">
       <a href="https://trollface.dk/" class="myButton">Meet Our Mascot!</a>
