update mascot section and footer section

--- a/cohorts/8/index.html
+++ b/cohorts/8/index.html
@@ -8,6 +8,7 @@
     <!--Google Font Implmentation-->
     <link href="https://fonts.googleapis.com/css2?family=Libre+Barcode+128+Text&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Cabin:400,400italic,500italic,700,700italic' rel='stylesheet' type='text/css'>
     <!--Bootstrap Implementation-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <!--Font Awesome Implementation-->
@@ -133,9 +134,32 @@
     <!--Mascot Section-->
     <section id="mascot-section" class="mascot">
         <div class="mascot-header-wrapper"><h2 class="mascot-header">MEET OUR <span class="span-orange">MASCOT</span></h2></div>
-        <div class="vulpixPic1"></div>
-        <div class="vulpixPic1BG"></div>
+        <br>
+        <div class="vulpix-container">
+            <div class="vulpixPic1"></div>
+            <div class="vulpixPic1BG"></div>
+        </div>
+        <div class="vulpix-description">
+            <img class="vulpix-logo" src="resources/vulpix.png" alt="">
+            <h2><b>Name:</b> Vulpix &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<b>Category:</b> Fox</h2>
+            <h2><b>Type:</b> Fire <i class="fa fa-fire"></i> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <b>Abilities:</b> Flash Fire</h2>
+            <form target=”_blank” action="https://www.pokemon.com/us/pokedex/vulpix">
+                <input class="pokedexBtn" type="submit" value="Learn More">
+            </form>
+        </div>
     </section>
+
+    <footer class="center">
+        <h2 class="footer-text">Hope You Enjoyed Our Site!</h2>
+        <div class="footer-btn-holder">
+            <form target=”_blank” action="https://www.gatech.edu/">
+                <input class="footer-btn" type="submit" value="Visit Georgia Tech">
+            </form>
+            <form target=”_blank” action="https://bitsofgood.org/">
+                <input class="footer-btn" type="submit" value="Visit Bits of Good">
+            </form>
+        </div>
+    </footer>
 
     <!--These Scripts are for Bootstrap (collapse)-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
