--- a/cohorts/5/index.html
+++ b/cohorts/5/index.html
@@ -1,4 +1,3 @@
-section
 <head>
     <link rel="stylesheet" type="text/css" href="index.css" />
     <style>
@@ -35,6 +34,12 @@ section
                 </picture>
                 <picture>
                     <img src="assets/Me_on_hike.png">
+                </picture>
+                <picture>
+                    <img src="assets/PBD_JasmineLi.jpg"
+                </picture>
+                <picture>
+                    <img src="assets/IMG_9387.JPG"
                 </picture>
             </div> 
         </section>
