feat: basic js for cohort page

--- a/cohorts/2/index.html
+++ b/cohorts/2/index.html
@@ -2,7 +2,8 @@
 
 <head>
     <link rel="stylesheet" href="index.css">
-    <title>Cohort 2: TerribleTwos</title>
+    <title>Cohort 2: TerribleTwos</title>    
+    <script src="index.js"></script>
 </head>
 
 <body>
