--- a/cohorts/5/index.html
+++ b/cohorts/5/index.html
@@ -23,25 +23,23 @@
     </p>
 
     <main>
-        <section class="team">
+        <div class=”gallery”>
             <h2>
                 Cohort Names
             </h2>   
-
-            <div class="pictures">
-                <picture>
-                    <img src="assets/Image from iOS.jpg"/>
-                </picture>
-                <picture>
+            <div class="outer-grid">
+                <div class="inner-grid">
+                    <img src="assets/Image from iOS.jpg">
+                    <img src="assets/IMG_9387.JPG">
+                </div>
+                <div class="inner-grid">
                     <img src="assets/Me_on_hike.png">
-                </picture>
-                <picture>
-                    <img src="assets/PBD_JasmineLi.jpg"
-                </picture>
-                <picture>
-                    <img src="assets/IMG_9387.JPG"
-                </picture>
-            </div> 
+                    <img src="assets/PBD_JasmineLi.jpg">
+                </div>
+            </div>
+          </div>
+        <section class="gallery">
+
         </section>
         <div class="names">
             <ul>
