update css & html

--- a/index.html
+++ b/index.html
@@ -64,20 +64,20 @@
     <p>"dignity and refinement above all"</p>
     <div class="grid">
       <div class="grid_item">
-        <button id="P" onclick="getPhoebeFunFact()">Reveal Phoebes Fun Fact </button>
-        <img src="Phoebe.jpg" />
+        <p id = "P">Reveal Phoebe's Fun Fact</p>
+        <img src="phoebe.jpg" onclick = "getPhoebeFunFact()"/>
       </div>
       <div class="grid_item">
-        <button id="V" onclick="getVikasFunFact()">Reveal Vikas's Fun Fact </button>
-        <img src="vikas.jpg"/>
+        <p id = "V">Reveal Vikas's Fun Fact</p>
+        <img src="vikas.jpg" onclick = "getVikasFunFact()"/>
       </div>
       <div class="grid_item">
-        <button id="E" onclick="getEmaFunFact()">Reveal Ema's Fun Fact </button>
-        <img src="ema.jpg" />
+        <p id = "E">Reveal Ema's Fun Fact</p>
+        <img src="ema.jpg" onclick = "getEmaFunFact()"/>
       </div>
       <div class="grid_item">
-        <button id="J" onclick="getJonathanFunFact()">Reveal Jonathan's Fun Fact </button>
-        <img src="jonathan.jpeg" />
+        <p id = "J">Reveal Jonathan's Fun Fact</p>
+        <img src="jonathan.jpeg" onclick = "getJonathanFunFact()"/>
       </div>
     </div>
     <img id="chowchow"
