--- a/cohorts/1/index.html
+++ b/cohorts/1/index.html
@@ -2,20 +2,20 @@
 <html>
     <head>
         <link rel="stylesheet" href="index.css">
-        <title>Hypertext Assassins</title>
+        <title>HyperText Assassins</title>
     </head>
     <body>
         <header>
             <!-- <img src="assets/header.png" width="400" height="100"/> -->
         </header>
-        <h1 class="main">Cohort Hypertext Assassins</h1> 
+        <h1 class="main" id = "myCohortName">Cohort Hypertext Assassins</h1> 
         <div class="welcome">
-            <h3 class="main">Sparking joy one flame at a time \(^ヮ^)/</h3>
+            <h3 class="main" id = "myCohortMotto">Sparking joy one flame at a time \(^ヮ^)/</h3>
             <a href="https://youtu.be/oHg5SJYRHA0">Welcome to Calcifer: ruler of the Hypertext Assassins!</a>
         </div>
         <div class="box">
             <h3>Cohort Members</h3>
-            <ul>
+            <ul class="members">
                 <li>
                     <a href="https://github.com/GTBitsOfGood/bootcamp/tree/fall-2020/hypertextAssassins-Emily">Emily Layton</a>
                 </li>
@@ -43,6 +43,7 @@
         <p>This repository is licensed under the <a href="../../LICENSE.txt">GNU GPLv3 License</a>.</p>
         <h3>Bits of Good Motto</h3>
         <p>01000010 01111001 01110100 01100101</p> -->
+        <script src="./index.js"></script>
     </body>
 </html>
     
