--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </h1>
     <button onclick="sayYo()">ClickMeForGreeting</button>
     <p>Welcome to our page!</p>
-    <p>"dignity and refinement above all"</p>
+    <p id='mutto'>"dignity and refinement above all"</p>
     <div class="grid">
       <div class="grid_item">
         <p id = "P">Reveal Phoebe's Fun Fact</p>
